--- a/src/pages/PlanetPage/PlanetPage.scss
+++ b/src/pages/PlanetPage/PlanetPage.scss
@@ -1,62 +1,58 @@
 @use "../../stylesheets/global.scss" as *;
 
-
-.planet{
-    background-color: $accent-color;
-    padding: 1rem;
-    color: #000;
+.planet {
+  background-color: $secondary-color;
+  padding: 1rem;
+  color: $text-color;
 }
 
-.planet__image{
-    width: 100%;
-    margin-bottom: 20px;
+.planet__image {
+  width: 100%;
+  margin-bottom: 20px;
 }
 
-.details{
-    background-color: $accent-color;
-    color: #000;
-    width: 100%;
-    padding: 1rem;
+.details {
+  background-color: $secondary-color;
+  color: $text-color;
+  width: 100%;
+  padding: 1rem;
 }
 
-.details__title{
-    font-size: 1.5rem;
+.details__title {
+  font-size: 1.5rem;
 }
 
-.details__info{
-    font-size: 1.1rem;
+.details__info {
+  font-size: 1.1rem;
 }
 
-.details__subheader{
-    font-size: 1.25rem;
+.details__subheader {
+  font-size: 1.25rem;
 }
 
-.stats__grid{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0 0.5rem;
-    
+.stats__grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0 0.5rem;
 }
 
-
-.details__button{
-    display: block;
-    width: 100%;
-    background-color: $button-color;
-    border: none;
-    font-size: 1.15rem;
-    padding: 0.7rem;
-    color: $text-color;
+.details__button {
+  display: block;
+  width: 100%;
+  background-color: $accent-color;
+  border: none;
+  font-size: 1.15rem;
+  padding: 0.7rem;
+  color: $text-color;
 }
-
 
 @media (min-width: 768px) {
-    .planet{
-        width: 100%;
-        padding: 2rem;
-    }
+  .planet {
+    width: 100%;
+    padding: 2rem;
+  }
 
-    .details{
-        width: 600px;
-    }
+  .details {
+    width: 600px;
+  }
 }
