--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -5,7 +5,8 @@
 $background-color: light-dark(#eaeaea, #1d1d1d);
 $text-color: light-dark(#000, #fff);
 $font-family: "Roboto", sans-serif;
-$accent-color: light-dark(#fda03c, #fcab39);
+$secondary-color: light-dark(#dcdbda, #232323);
+$accent-color: #ff991d;
 $button-color: light-dark(#eae9e9, #222222);
 
 * {
@@ -32,4 +33,15 @@ body {
   height: 100%;
   margin: auto 0;
   padding: 0.5rem;
+}
+
+button {
+  transition: all 0.3s ease-in-out;
+  height: 40px;
+}
+
+button:hover {
+  background-color: transparent;
+  height: 39px;
+  border: 1px solid $accent-color;
 }
